[MDR] Modifications to list jobs, running flows, and console to only show user's flows, unless your are and admin :O